# my_docs

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README.rst  bash.html  build_docs.sh  docker.html  genindex.html  git.html  github_actions.html  index.html  jinja.html  linux_commands.html  mermaid.html  objects.inv  pyproject.toml  pytest.html  python.html  rust.html  search.html  searchindex.js  ssh.html  systemd.html  uboot.html  usage.html  yocto.html
.claude/: settings.json
.claude/commands/: commit.md
.claude/rules/: github-actions-versions.md  pre-commit-versions.md
.github/: sphinx_docker_build.md
.github/actions/: Dockerfile  action.yml  script.sh
.github/workflows/: deploy.yml  pr-check.yml  sphinx.yml
_sources/: docker.rst.txt  git.rst.txt  github_actions.rst.txt  index.rst.txt  jinja.rst.txt  linux_commands.rst.txt  mermaid.rst.txt  pytest.rst.txt  python.rst.txt  rust.rst.txt  ssh.rst.txt  usage.rst.txt
docs/: make.bat  requirements.txt
docs/source/: ansible.rst  api.rst  arm_cortex_memory.rst  bash.rst  can_bus.rst  claude.rst  cmake.rst  conf.py  cpp.rst  cybersecurity.rst  debugging.rst  docker.rst  freertos.rst  git.rst  github_actions.rst  github_multiple_accounts.rst  index.rst  jinja.rst  linux_commands.rst  linux_driver_dev.rst  low_power_design.rst  mcp.rst  mermaid.rst  mqtt.rst  openviking.rst  prompt_engineering.rst  pytest.rst  python.rst  python_build_tools.rst  rest_api.rst  ros2.rst  rust.rst  ssh.rst  systemd.rst  tmux.rst  uboot.rst  udev.rst  wsl.rst  yocto.rst  zephyr_rtos.rst
(+3 files in other folders)
